# akiyaserch

./: .gitignore  DEPLOY.md  NEXT.md  README.md  pyproject.toml  requirements.txt  vercel.json
.claude/: remote-branch
.claude/hooks/: session-start.sh
.github/workflows/: ci.yml  notify.yml  score.yml  scrape.yml
api/: index.py
config/: .env.example  filters.yaml  preferences.yaml
src/: cli.py  db.py  filter.py  normalize.py  notifier_discord.py  scheduler.py  scorer.py
src/scrapers/: __init__.py  akiya_athome.py  base.py  classo_tambasasayama.py  gojo_akiyabank.py  higashiyoshino.py  ieichiba.py  iga_akiyabank.py  koka_iju.py  kyotango_akiya.py  minna_0en.py  nabari_akiyabank.py  nancla.py  ohdai_awa.py  shimoichi_akiyabank.py  takahashi_akiyabank.py  takashima_akiya.py  totsukawa.py  uda_akiyabank.py  wakayama_life.py  yabu_indep.py
src/web/: app.py
src/web/templates/: index.html
tests/: test_filter.py  test_minna0en.py  test_normalize.py  test_pricedrops.py  test_takahashi.py  test_web.py
