[project]
name = "trade"
version = "0.1.0"
description = "0円・格安物件 監視＆通知システム"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "feedparser>=6.0",
    "pyyaml>=6.0",
    "click>=8.1",
    "python-dotenv>=1.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "jinja2>=3.1",
    "python-dateutil>=2.9",
    "libsql-client>=0.3",
    "truststore>=0.10.4",
]

[project.optional-dependencies]
maps = ["googlemaps>=4.10"]
ai = ["anthropic>=0.40"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24", "ruff>=0.7"]

[project.scripts]
trade = "src.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"
